# sparkifydb-pg

./: README.md  pyproject.toml
notebooks/: etl.ipynb
sparkifydb_pg/: create_tables.py  etl.py  sql_queries.py
tests/: test_sparkifydb_pg.py
